<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_key_info_author"
        android:title="@string/pref_author"
        android:summary="@string/pref_author_summary"
        android:persistent="false"/>
	<Preference
        android:key="pref_info_this_license"
        android:summary="License details for this application"
        android:title="License" />
    <Preference
        android:key="@string/pref_key_info_notices"
        android:title="@string/pref_notice"
        android:summary="@string/pref_notice_summary"
        android:persistent="false"/>
    <Preference
        android:key="@string/pref_key_info_version"
        android:title="@string/pref_version"
        android:summary="@string/pref_version_summary"
        android:persistent="false"/>
</PreferenceScreen>