<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013-2015 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of UPES Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Attendance" >
        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="@string/pref_key_sub_limit"
            android:defaultValue="0"
            android:title="@string/pref_subject_limit"
            android:dialogTitle="@string/pref_subject_limit_dialog"
            android:entries="@array/pref_subject_limit_entries"
            android:entryValues="@array/pref_subject_limit_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Timetable" >
		<CheckBoxPreference
            android:key="@string/pref_key_mute"
            android:defaultValue="false"
            android:title="@string/pref_mute"
            android:summary="@string/pref_mute_summary" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="@string/pref_key_ring_mode"
            android:defaultValue="1"
            android:title="@string/pref_ringer"
            android:dialogTitle="@string/pref_ringer"
            android:dependency="@string/pref_key_mute"
            android:entries="@array/pref_ring_entries"
            android:entryValues="@array/pref_ring_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Network" >
        <CheckBoxPreference
            android:key="@string/pref_key_ga_opt_in"
            android:defaultValue="true"
            android:title="@string/pref_ga_opt_in"
            android:summary="@string/pref_ga_opt_in_summary" />
        <CheckBoxPreference
            android:key="@string/pref_key_sync"
            android:defaultValue="true"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summary" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="@string/pref_key_sync_interval"
            android:defaultValue="360"
            android:title="@string/pref_refresh"
            android:dialogTitle="@string/pref_refresh"
            android:dependency="@string/pref_key_sync"
            android:entries="@array/pref_data_sync_interval_entries"
            android:entryValues="@array/pref_data_sync_interval_values"/>

        <!-- opens another nested subscreen -->
        <PreferenceScreen
            android:persistent="false"
            android:title="@string/pref_proxy"
            android:summary="@string/pref_proxy_summary" >
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Info" >

        <PreferenceScreen
            android:key="@string/pref_key_info_about"
            android:persistent="false"
            android:title="@string/pref_about"
            android:summary="@string/pref_about_summary"/>
    </PreferenceCategory>

</PreferenceScreen>