<!--
  ~ Copyright (c) 2013-2016 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of UPES Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="70"
        android:icon="@drawable/refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_today"
        android:orderInCategory="90"
        android:title="@string/menu_today"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_date"
        android:orderInCategory="80"
        android:title="@string/menu_date"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never">
    </item>

</menu>