<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of UPES Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="clip_vertical"
        android:background="@drawable/background"
        android:layout_below="@+id/toolbar">


        <ImageView
            android:id="@+id/ivAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/background_text"
            />

        <EditText
            android:id="@+id/etSapid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivAppName"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_sapid"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number|textNoSuggestions"
            android:padding="10dp"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etSapid"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword|textNoSuggestions"
            android:padding="10dp"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/bLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/etPass"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/log_in" />

    </RelativeLayout>

</RelativeLayout>