<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013-2016 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of UPES Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,UnknownIdInLayout"
    tools:context=".ui.login.LoginActivity">

    <include layout="@layout/include_toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        android:contentDescription="background_image" />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="@dimen/login_activity_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etSapid"
                app:errorEnabled="true"
                android:theme="@style/HintTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@android:color/white"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_sapid"
                    android:textColor="@android:color/white"
                    android:maxLength="9"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number|textNoSuggestions"
                    android:padding="8dp"
                    android:maxLines="1" >

                    <requestFocus />
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPass"
                app:errorEnabled="true"
                android:theme="@style/HintTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@android:color/white"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_password"
                    android:textColor="@android:color/white"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword|textNoSuggestions"
                    android:padding="10dp"
                    android:maxLines="1" >
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:padding="5dp"
                android:gravity="center"
                android:elevation="5dp"
                android:background="@drawable/login_button"
                android:textColor="@color/accent"
                android:text="@string/log_in" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>